# minsnap_trajectories

./: .pylintrc  LICENSE  README.md  pyproject.toml
example/: example.py
src/minsnap_trajectories/: __init__.py  minimum_snap.py  minimum_snap.pyi
tests/: test_minsnap.py
tests/data/: icsl_jeon_3d.mat  symao_closed_form.mat  symao_simple.mat
